--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,45 +1,1 @@
-<div class="container"><br></div>
-<!-- <div class="jumbotron">
-    <div class="container"> -->
-      <!-- <ngb-alert type="success" [dismissible]="false">
-        Bootstrap is working!
-      </ngb-alert> -->
-  
-      <!-- <h1>
-        <i class="fa fa-bath" aria-hidden="true"></i>
-        And so is Font Awesome!
-      </h1>
-    </div>
-</div> -->
-  <div class="container">
-    <ng-container  *ngIf = "!showDashboard">
-        <ngb-tabset>
-            <ngb-tab title="Login">
-                <ng-template ngbTabContent>
-                  <div class="jumbotron">
-                      <div class="container">
-                          <app-login></app-login>
-                      </div>
-                  </div>
-                </ng-template>
-              </ngb-tab>
-              <ngb-tab title="Signup">
-                <ng-template ngbTabContent>
-                  <div class="jumbotron">
-                      <div class="container"><app-signup></app-signup></div>
-                  </div>
-                </ng-template>
-              </ngb-tab>  
-          </ngb-tabset>      
-    </ng-container>
-
-    <ng-container *ngIf = "showDashboard">
-        <div class="jumbotron">
-            <div class="container">
-                <app-dashboard [userName]="userName" ></app-dashboard>
-            </div>
-        </div> 
-    </ng-container>
-    
-  </div>
-
+<router-outlet></router-outlet>
