--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -1,7 +1,8 @@
+<!-- <div>Dashboard</div> -->
 <!-- nav -->
 <nav class="navbar navbar-expand navbar-dark bg-dark">
     <div class="navbar-nav">
-        <a class="nav-item nav-link" routerLink="/">Home</a>
+        <!-- <a class="nav-item nav-link" routerLink="/">Home</a> -->
         <div class="pull-right">       
             <button type="button"
                 class="btn btn-primary"
@@ -18,7 +19,7 @@
 <!-- main app container -->
 <div class="jumbotron">
     <div class="container">
-        <div class="col-lg-12">
+        <div  *ngIf = "showDashboard" class="col-lg-12">
             <div class="row">
                 <h1>Welcome {{userDetails.firstName}}</h1>
             </div>
@@ -47,6 +48,8 @@
                 </div>
             </div>
         </div>
+
+        <div  *ngIf = "!showDashboard" class="col-lg-12">No Data Available</div>
 
     </div>
 </div>
